--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_APP_NAME=FACINGS Creator
-NEXT_PUBLIC_APP_DESCRIPTION=The FACINGS Creator is a platform for managing AtomicAssets NFT collections, based upon the open source collection-manager project.
+NEXT_PUBLIC_APP_NAME=Tech_NFT Creator
+NEXT_PUBLIC_APP_DESCRIPTION=The Tech_NFT Creator is a platform for managing AtomicAssets NFT collections, based upon the open source collection-manager project.
 NEXT_PUBLIC_FAVICON=https://facings.fra1.cdn.digitaloceanspaces.com/FACINGS%20Logo%20MASK_Negative%20RGB.svg
 NEXT_PUBLIC_META_ICON=https://cdn.facings.io/FACINGS_Logo_mask_negative.png
 NEXT_PUBLIC_APP_URL=https://creator.facings.io
